<!--
  ~ Copyright (c) 2020, Shashank Verma <shashank.verma2002@gmail.com>
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  -->

<resources>
    <string name="app_name">Flip-to-Shush</string>
    <string name="flip_description">When notifications are annoying you or disturbing at work, just turn on screen and you can flip your phone (facing the back of the phone upwards) and this app will do the same.</string>
    <string name="intro">This app allows your phone to get one of the useful features from Google Pixel 3 i.e\n\'Flip-to-Shhh\'.\nIt enables the \'Do not Disturb\' when you flip your phone.</string>
    <string name="cont">Tap below to enable this feature.</string>
    <string name="configure">Configure</string>
    <string name="permission_required">Permission Required</string>
    <string name="continue_text">Continue</string>
    <string name="permission_des">We need the \'Do not Disturb\' access permission in order to enable this feature.</string>
    <string name="get_permission">Get Permission</string>
    <string name="enable">Enable</string>
    <string name="stop">Stop</string>
    <string name="your_device_will_vibrate_once_it_detects_that_it_is_facing_it_s_back_upward">Your device will vibrate within 1 – 3 seconds once it detects that it is \'flipped\'</string>
    <string name="contact_developer">Contact Developer</string>
    <string name="rate_this_app">Rate</string>
    <string name="share_this_app">Share this App</string>
    <string name="help">Help</string>
    <string name="enable_f">Enable Feature</string>
    <string name="starting">Starting …</string>
    <string name="ask_a_question">Ask a Question</string>
    <string name="tile_des">You can add quick toggle tile\nto easily toggle to on or off the feature in the quick settings panel.\nEdit your panel to add the tile.\nIt\'s symbol look like this …</string>
    <string name="settings">Settings</string>
    <string name="sensing_type">Sensing Type</string>
    <string name="pixel_stock">Pixel Stock</string>
    <string name="all_time">All Time</string>
    <string name="stock_des">This is the actual default Pixel feature to detect and enable DND (Do Not Disturb) when the device is flipped facing the back of it upwards.</string>
    <string name="allTime_des">In this setting, just flip once anywhere and DND will be enabled.\nFlip once again and you\'ve disabled DND :) Try to make device as flat as possible while flipping for better detection.\n\nDefinitely don\'t forget to turn ON screen before flipping. The DND would not go off unless you flip again or you manually turn it off.</string>
    <string name="stop_feature">Stop Feature</string>
    <string name="stopping">Stopping …</string>
    <string name="vibration">Vibration</string>
    <string name="intensity">Intensity</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="apply">Apply</string>
    <string name="do_not_disturb">Do Not Disturb (DND)</string>
    <string name="interruption_filter">Interruption Filter :</string>
    <string name="filter_none">None</string>
    <string name="filter_priority">Priority</string>
    <string name="filter_alarms">Alarms</string>
    <string name="set_interruption_filter">Set Interruption Filter</string>
    <string name="filter_des">*The type of option you choose, those notifications will be filtered and shown to you when DND is enabled.</string>
    <string name="alarms">Alarms</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy">privacy</string>
    <string name="change_theme">Change Theme</string>
    <string name="choose_theme">Choose Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="set_by_battery_saver">Set by Battery Saver</string>
    <string name="system_default">System Default</string>
    <string name="theme">Theme</string>
    <string name="sensor_testings">Sensor Testings</string>
    <string name="accelerate_test_description">We are testing your accelerometer first. Keep your device on a flat surface and press the \'Start\' button.</string>
    <string name="test_description">Before continuing to use this app, you\'re required to test your sensor if it is working correctly.\nThank you.</string>
    <string name="start">Start</string>
    <string name="acc_test_started">Now move your device a bit and see the value below changing. Keep your device flat after 2–3 seconds. After 5–10 seconds, your device will vibrate once testing is completed.</string>
    <string name="accelerometer_test">Accelerometer Test</string>
    <string name="proximity_test">Proximity Test</string>
    <string name="pro_test_started">Your proximity sensor should be on the above chin of your deivce. Place your on the proximity sensor and remove several times to see the value below changing. Once you have changed it more than 5 times, test is completed</string>
    <string name="done">Done</string>
    <string name="failed">Failed</string>
    <string name="pro_test_des">Now we will test your proximity sensor. Before continuing, make sure you know where your proximity sensor is located. You can still try if you are not sure.</string>
    <string name="show_off_app_toast">Show off-app Toast</string>
    <string name="support_us">Support Us</string>
</resources>
