<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020, Shashank Verma <shashank.verma2002@gmail.com>
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  -->

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/colorAccent"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/int_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/google_sans_bold"
            android:text="@string/set_interruption_filter"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/noneCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:checked="true"
                android:padding="4dp"
                android:text="@string/filter_none"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/priorityCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:padding="4dp"
                android:text="@string/filter_priority"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/alarmCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:fontFamily="@font/google_sans_bold"
                android:padding="4dp"
                android:text="@string/alarms"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/disclaimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/filter_des"
            android:lineSpacingExtra="3dp"
            android:textColor="#F7F7F7"
            android:textSize="15sp" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>