<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020, Shashank Verma <shashank.verma2002@gmail.com>
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/snack"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".activities.SettingsActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:animateLayoutChanges="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:padding="8dp"
                android:text="@string/settings"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <!--<com.google.android.material.card.MaterialCardView
                android:id="@+id/themeChooser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:contentPadding="4dp"
                app:rippleColor="@color/colorAccent"
                app:strokeColor="@color/stroke"
                app:strokeWidth="0.5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/theme"
                        android:textColor="@color/textColor"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/curTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_bold"
                        android:padding="4dp"
                        android:textColor="@color/textColor"
                        android:textSize="16sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>-->

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/interruptionChooser"
                style="@style/Widget.MaterialComponents.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:contentPadding="4dp"
                app:rippleColor="@color/colorAccent"
                app:strokeColor="@color/stroke"
                app:strokeWidth="0.5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/in_dnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/do_not_disturb"
                        android:textColor="@color/textColor"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/sub_int"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/google_sans_bold"
                            android:padding="4dp"
                            android:text="@string/interruption_filter"
                            android:textColor="@color/textColor"
                            android:textSize="16sp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/filterStat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:lineSpacingExtra="3dp"
                            android:padding="8dp"
                            android:text="@string/filter_none"
                            android:textSize="15sp" />

                    </LinearLayout>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.MaterialComponents.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:contentPadding="4dp"
                app:rippleColor="@color/colorAccent"
                app:strokeColor="@color/stroke"
                app:strokeWidth="0.5dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/google_sans_bold"
                    android:padding="12dp"
                    android:text="@string/show_off_app_toast"
                    android:textColor="@color/textColor"
                    android:textSize="15sp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/offToastCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="12dp"
                    android:checked="true" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:strokeColor="@color/stroke"
                app:strokeWidth="0.5dp">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/sensing_type"
                        android:textColor="@color/textColor"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/stockCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:fontFamily="@font/google_sans_bold"
                        android:padding="8dp"
                        android:text="@string/pixel_stock"
                        android:textColor="@color/textColor"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="42dp"
                        android:layout_marginEnd="16dp"
                        android:lineSpacingExtra="3dp"
                        android:text="@string/stock_des"
                        android:textSize="15sp" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/allTimeCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/google_sans_bold"
                        android:padding="8dp"
                        android:text="@string/all_time"
                        android:textColor="@color/textColor"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="42dp"
                        android:layout_marginEnd="16dp"
                        android:lineSpacingExtra="3dp"
                        android:text="@string/allTime_des"
                        android:textSize="15sp" />
                </RadioGroup>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:strokeColor="@color/stroke"
                app:strokeWidth="0.5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:padding="8dp"
                        android:text="@string/vibration"
                        android:textColor="@color/textColor"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_bold"
                        android:padding="8dp"
                        android:text="@string/intensity"
                        android:textColor="@color/textColor"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatSeekBar
                        android:id="@+id/seekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:max="500"
                        android:progressTint="@color/colorAccent"
                        android:thumbTint="@color/colorAccent" />

                    <androidx.coordinatorlayout.widget.CoordinatorLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginBottom="14dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:lineSpacingExtra="3dp"
                            android:text="@string/low"
                            android:textSize="15sp" />


                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:lineSpacingExtra="3dp"
                            android:text="@string/medium"
                            android:textSize="15sp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:lineSpacingExtra="3dp"
                            android:text="@string/high"
                            android:textSize="15sp" />

                    </androidx.coordinatorlayout.widget.CoordinatorLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/applyBtn"
                        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_margin="12dp"
                        android:fontFamily="@font/google_sans_bold"
                        android:text="@string/apply"
                        android:textColor="@android:color/white"
                        android:theme="@style/Theme.MaterialComponents.NoActionBar"
                        android:visibility="gone"
                        app:backgroundTint="@color/colorAccent"
                        app:rippleColor="@color/colorPrimary" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>